# awsiot

./: .gitignore  CMakeLists.txt  awsiot.code-workspace  generate_certs_header.py  output.json  payload.json  platformio.ini  readme.md  sdkconfig.esp32-c3-devkitm-1  setup_convo.md  shadow_check.json  shadow_output.json
.kilo/plans/: 1778272492427-silent-falcon.md
awsiot certs/: 84ff793212751e64aa2c2837099d8f40a171534743159c7b9b3714fdc5f8c1fb-certificate.pem.crt  84ff793212751e64aa2c2837099d8f40a171534743159c7b9b3714fdc5f8c1fb-private.pem.key  84ff793212751e64aa2c2837099d8f40a171534743159c7b9b3714fdc5f8c1fb-public.pem.key
connect_device_package/: esp32-c3_awsiot1-Policy  esp32-c3_awsiot1.public.key  start.sh
esp32c3-aws-iot/: CMakeLists.txt  aws-iot-policy.json  sdkconfig.defaults
esp32c3-aws-iot/main/: AmazonRootCA1.pem  CMakeLists.txt  Kconfig.projbuild  app_config.c  app_config.h  app_main.c  certs.h  device_cert.pem  led_control.c  led_control.h  mqtt_aws.c  mqtt_aws.h  private_key.pem  time_sync.c  time_sync.h  wifi_manager.c  wifi_manager.h
src/: CMakeLists.txt  main.c
src/certs/: device.cert.pem  private.key.pem
